--- a/tests/test_configuration/icat.yml
+++ b/tests/test_configuration/icat.yml
@@ -14,6 +14,10 @@
     InstrumentVariables_name: [ $roby.name, $robz.name ]
     InstrumentVariables_value: [ $roby.position, $robz.position ]
 
+- name: icat2
+  plugin: bliss
+  class: ICATmeta
+
 - name: icat_nexus_writer_sessions
   plugin: bliss
   class: ICATmeta
