--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ treelib <= 1.5.5
 typeguard >= 2.12.0
 typing_extensions
 yappi
+stompest
 
 # Flint
 ipykernel >= 5.2  # make sure qtconsole is working
