--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ pygments
 pygraphviz >= 1.5
 pyserial > 2
 pytango >= 9.3.1
-python >= 3.7
+python >= 3.7, <3.8
 redis >= 6.0.6
 redis-py == 3.5.1
 requests
